# rinha_de_backend_2024_q1_rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  run_dev_load_balancer.sh  run_dev_load_balancer_http.sh  run_dev_load_balancer_tcp.sh  run_dev_load_test.sh
database/: Cargo.toml
database/src/: lib.rs
load_balancer/: Cargo.toml  Dockerfile
load_balancer/src/: main.rs
load_balancer_http/: Cargo.toml  Dockerfile
load_balancer_tcp/: Cargo.toml  Dockerfile
load_balancer_tcp/src/: main.rs
load_test/: Cargo.toml
src/: main.rs
src/load_test/: Cargo.toml
src/load_test/src/: main.rs
